# crud-rs

./: .env  Cargo.toml
src/: main.rs
src/config/: mod.rs
src/handlers/: records.rs
src/models/: mod.rs
